vlib/v/checker/tests/comptime_branching_working_with_a_custom_compile_error.out
vlib/v/checker/tests/comptime_branching_working_with_a_custom_compile_error.vv:15:10: error: 11
   13 | 
   14 | fn main() {
   15 |     println(create(123))
      |             ~~~~~~~~~~~
   16 | }
