vlib/v/checker/tests/comptime_branching_working_with_a_custom_compile_error.vv
type Value = bool | voidptr

pub fn create[T](val T) Value {
	$if T is bool {
		println('bool ${val}')
		return Value(val)
	} $else {
		$compile_error('11')
		println('not bool ${val}')
	}
	return Value(voidptr(123))
}

fn main() {
	println(create(123))
}
